--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
           <input type="CC" class="form-control" id="CC" placeholder="CC">
           <label for="floatingPassword">Credit Card Number</label>
         </div>
-        <h3 class="imp">This website doesn't save data so contact me with the information to join kool kids gang</h3>
+        <h3 class="imp">This website doesn't save data so contact me with the information to join kool kids gang h***awn. complete game for name</h3>
 </section>
 <p>As a reward of doing this Forum. Play <a href="page3.html">this minigame</a> of press the button.</p>
     </body>
