--- a/page5.html
+++ b/page5.html
@@ -23,6 +23,8 @@
       <p class="question">Not again</p>
       <p>Just trolling around. Now that you have completed the challenge, You are worth to be in our army. This is the end of the website so if you want, You can go back to home screen by click <a href="index.html">This Link</a></p>
       <p class="pst">>Pssst! if you spam clicked on the last page then remember you are berserker type of character and if you click and dragged towards image then you smort </p>
+      <br>tho here is your reward. name is "howtorespawn"
+      <br>This part is for hunt game. Dont actually send your Credit card number to anyone.
     </body>
   </body>
 </html>
