--- a/page5.html
+++ b/page5.html
@@ -25,7 +25,9 @@
       <p class="pst">>Pssst! if you spam clicked on the last page then remember you are berserker type of character and if you click and dragged towards image then you smort </p>
       
       <p style="color: #f7db5d;">tho here is your reward. name is "howtorespawn" <br>
-        This part is for hunt game. Dont actually send your Credit card number to anyone.</p>
+        This part is for hunt game. Dont actually send your Credit card number to anyone. <br>
+        Github and Discord name^
+      </p>
     </body>
   </body>
 </html>
