--- a/page5.html
+++ b/page5.html
@@ -26,7 +26,7 @@
       
       <p style="color: #f7db5d;">tho here is your reward. name is "howtorespawn" <br>
         This part is for hunt game. Dont actually send your Credit card number to anyone. <br>
-        Github and Discord name^
+        Github and Discord name^. do contact me
       </p>
     </body>
   </body>
