--- a/page5.html
+++ b/page5.html
@@ -25,8 +25,8 @@
       <p class="pst">>Pssst! if you spam clicked on the last page then remember you are berserker type of character and if you click and dragged towards image then you smort </p>
       
       <p style="color: #f7db5d;">tho here is your reward. name is "howtorespawn" <br>
-        This part is for hunt game. Dont actually send your Credit card number to anyone. <br>
-        Github and Discord name^. do contact me (for legal reason. i aint asking for ur bank access)
+        Discord name^. do contact me (for legal reason. i aint asking for ur bank access) <br>
+        This part is for hunt game i randomly made. Dont send your Credit card number to anyone.
       </p>
     </body>
   </body>
